# Microfinance-Platform

./: Cargo.toml  README.md
src/: ai_credit_scorer.rs  cross_chain_liquidity_pool.rs  dynamic_interest_calculator.rs  impact_tracker.rs  insurance_pool.rs  lib.rs  microfinance_pool.rs  mock_ai_oracle.rs  mock_economic_oracle.rs  reputation_governance.rs
tests/: lib.rs  test_microfinance.rs
